# Potter_oneMKL_opt2

./: .gitignore  BENCHMARK_USAGE.md  CMakeLists.txt  INTEL_ONEMKL_CHANGES.md  LICENSE  Makefile  OPTIMIZATIONS_APPLIED.md  OPTIMIZATION_RECORD.md  OPTIMIZATION_WORKFLOW.md  Potter_Optimization_Round2.md  README.md  download_data.sh  oneMKL_icpx.md  quick_benchmark.sh
benchmark_results/: ACTUAL_RESULTS.md  FINAL_OPTIMIZATION_SUMMARY.md  cache_optimization_analysis.md  svo_analysis.md
docs/: VTUNE_GUIDE.md
scripts/: analyze_vtune_results.py  benchmark_performance.sh  benchmarks.sh  build_intel.sh  setup_vtune_permissions.sh  vtune_analysis.sh
src/db/: connection.h  database.cpp  device.cpp  device.h  netlist.cpp  routeNode.h
src/route/: aStarRoute.cpp  aStarRoute.h  partitionTree.cpp  runtimeFirstRouting.cpp  stableFirstRouting.cpp
src/utils/: geo.h  mkl_utils.cpp  mkl_utils.h
test/: opt_results.md  origin_results.md
